<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <EditText
            android:id="@+id/etxt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:nextFocusDown="@+id/etxt_tprKuupaev"
            android:singleLine="true"
            android:layout_below="@+id/spinner_dept"

            />

        <EditText
            android:id="@+id/etxt_tprKuupaev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_name"
            android:hint="@string/dob"
            android:nextFocusDown="@+id/etxt_tprNumber"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etxt_tprNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_tprKuupaev"
            android:hint="@string/prooviNr"
            android:nextFocusDown="@+id/etxt_tprVotuKoht"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etxt_tprVotuKoht"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/etxt_tprNumber"
            android:hint="@string/tprVotuKoht"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/spinner_dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <LinearLayout
            android:id="@+id/layout_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_tprVotuKoht"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/add" />

            <Button
                android:id="@+id/button_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>